--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
             <artifactId>spring-data-commons</artifactId>
             <version>2.1.6.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
         <!-- Log4j dependicies -->
         <dependency>
