Added logic for SlockMockBatch service
Added logic for SlowMockBatch service that gets hard coded BatchStatus
object. Added unit test to test the new SlowMockBatch service logic.

Added new asynchronous method for retrieving the BatchStatus object.

Added new REST get call for retrieving the BatchStatus object as JSON
data.

Added unit test to test the new getBatchStatus RESTful GET call and
validate that the data is correct.

Updated AppPropertyConfiguration class so it is possible to change the
sleep time for the SlowMockBatch service API.

Updated the REST documentation for the new GET REST call for
retrieving the BatchStatus JSON object.

Updated ApplicationConfiguration to allow asynchronous method calls.

Updated Dockerfile to run automated unit tests.

--- a/src/main/resources/schema/rest.yaml
+++ b/src/main/resources/schema/rest.yaml
@@ -50,6 +50,25 @@ paths:
                 example: 'System failure.'
                 type: string
 
+  /openbank/start/slow/batch/mock:
+    get:
+      summary: Returns a BatchStatus object with status enum string and message string.
+      description: Returns a BatchStatus object
+      responses:
+        '200':
+          description: Returns a BatchStatus JSON string.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BatchStatus'
+        '5XX':
+          description: Unexpected system error.
+          content:
+            application/json:
+              schema:
+                example: 'System failure.'
+                type: string
+
 components:
   schemas:
     BatchStatus:
