--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,8 +4,17 @@
          version="3.0">
 
     <context-param>
+        <param-name>contextClass</param-name>
+        <param-value>
+            org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+        </param-value>
+    </context-param>
+
+    <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:/META-INF/applicationContext.xml</param-value>
+        <param-value>
+            se.jsquad.configuration.ApplicationConfiguration
+        </param-value>
     </context-param>
 
     <listener>
