Migrated Spring OpenBank to Spring Boot
Refactored existing Dockerfile to be environment based,
requiring dependicy tools and kits to be installed on the environment
to be able to create a Docker trimmed down Wildfly image.

Refactored old pipeline Docker file to be to be more slimmed
and non-dependent environment trimmed Wildfly image.

Added pipeline and ordinary Docker Compose files to ease up the
execution of the OpenBank container.

Made the component/service/repository constructors public.

Refactored persistence.xml properties to be set instead from a
property fields file and imported by the EntityManagerFactoryBean.

Refactored Broker service and updated the JmsMessageQueueSender
system test.

Refactored thew Docker files to be able to execute the migrated
Spring Boot application.

Updated REST API documentation for the new base URL.

Updated README.md file for running the ported Spring Boot
application.

--- a/src/main/resources/schema/rest.yaml
+++ b/src/main/resources/schema/rest.yaml
@@ -6,7 +6,7 @@ info:
   version: 0.0.3
 
 servers:
-  - url: http://localhost:8080/openbank-spring-1.0-SNAPSHOT/restful-webservice/api
+  - url: http://localhost:8080/api
     description: Local OpenBank server
 
 paths:
