--- a/src/main/resources/schema/OpenBankAPIv1.yaml
+++ b/src/main/resources/schema/OpenBankAPIv1.yaml
@@ -15,6 +15,8 @@ paths:
   /api/client/info/{personIdentification}:
     get:
       summary: Get client by person identification number
+      description: Get the ClientAPI response object with uniqueue personal identification
+        number as parameter argument.
       operationId: getClientInformation
       parameters:
       - name: personIdentification
@@ -134,6 +136,8 @@ components:
           type: string
           description: Email address
           example: john.doe@mail.com
+      description: PersonAPI contains person's firstname, lastname and email address
+        information.
   securitySchemes:
     basicScheme:
       type: http
