--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<java.version>11</java.version>
 		<junit.jupiter.version>5.4.0</junit.jupiter.version>
 		<spring.version>5.1.6.RELEASE</spring.version>
-		<springdoc.openapi-ui.version>1.1.39</springdoc.openapi-ui.version>
+		<springdoc.openapi.version>1.1.44</springdoc.openapi.version>
 		<maven.surefire.version>2.22.2</maven.surefire.version>
 	</properties>
 
@@ -88,8 +88,8 @@
 
 		<dependency>
 			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>${springdoc.openapi-ui.version}</version>
+			<artifactId>springdoc-openapi-core</artifactId>
+			<version>${springdoc.openapi.version}</version>
 		</dependency>
 
 		<dependency>
@@ -213,8 +213,8 @@
 				<dependencies>
 					<dependency>
 						<groupId>org.springdoc</groupId>
-						<artifactId>springdoc-openapi-ui</artifactId>
-						<version>${springdoc.openapi-ui.version}</version>
+						<artifactId>springdoc-openapi-core</artifactId>
+						<version>${springdoc.openapi.version}</version>
 					</dependency>
 					<dependency>
 						<groupId>org.jvnet.jaxb2_commons</groupId>
