--- a/src/main/resources/schema/OpenBankAPIv1.yaml
+++ b/src/main/resources/schema/OpenBankAPIv1.yaml
@@ -33,6 +33,20 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ClientApi'
+        400:
+          description: Invalid personal identification number
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Invalid personal identification number.
+        404:
+          description: Client not found.
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Client not found.
         500:
           description: Severe system failure has occured!
           content:
