Updated Flyway migration and JPA validation logic
Updated Flyway migration and JPA validation entity logic
to support both entities for the 2 different persistence units.

Added JPA validation the persistence properties files.

--- a/src/test/resources/configuration/security_persistence.properties
+++ b/src/test/resources/configuration/security_persistence.properties
@@ -2,3 +2,4 @@ security.jpa.database-platform=org.hibernate.dialect.H2Dialect
 security.javax.persistence.schema-generation.database.action=drop-and-create
 security.jpa.hibernate.cache.use_second_level_cache=true
 security.jpa.hibernate.cache.region.factory.class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+security.hibernate.hbm2ddl.auto=validate
