--- a/src/test/resources/configuration/openbank_persistence.properties
+++ b/src/test/resources/configuration/openbank_persistence.properties
@@ -2,3 +2,4 @@ openbank.jpa.database-platform=org.hibernate.dialect.H2Dialect
 openbank.javax.persistence.schema-generation.database.action=drop-and-create
 openbank.jpa.hibernate.cache.use_second_level_cache=true
 openbank.jpa.hibernate.cache.region.factory.class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+openbank.hibernate.hbm2ddl.auto=validate
