--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,13 @@ services:
       test: ["CMD", "mysql", "--user=root", "--password=${ROOT_PASSWORD}", "-e", "'SHOW DATABASES;'"]
       timeout: 5s
       retries: 5
+  flyway:
+    image: flyway/flyway:6.0.6
+    command: -url=jdbc:mysql://securitydb -schemas=security -user=root -password=${ROOT_PASSWORD} -connectRetries=60 migrate
+    volumes:
+      - ./security/sql:/flyway/sql
+    depends_on:
+      - securitydb
   openbank:
     image: openbank
     build:
