--- a/docker-compose-pipeline.yaml
+++ b/docker-compose-pipeline.yaml
@@ -37,7 +37,7 @@ services:
       dockerfile: PipelineDockerfile
     environment:
       MASTER_SECRET: "${MASTER_KEY}"
-      CONFIG_FILE_LOCATIONS: "classpath:application.properties,classpath:configuration_local.yaml,classpath:activemq.properties,classpath:openbank_persistence.properties,classpath:security_persistence.properties"
+      CONFIG_FILE_LOCATIONS: "classpath:application.properties,classpath:configuration_local.yaml,classpath:activemq.properties,classpath:openbank_jpa.yaml,classpath:security_jpa.yaml"
     ports:
       - 8080:8080
       - 9990:9990
