Added RFC3339 GET RESTful endpoint
Verify that the example data gets generated properly.

Updated the REST response entity so the global exception only
deals with runtime exception.

--- a/pom.xml
+++ b/pom.xml
@@ -240,6 +240,7 @@
 					<sources>
 						<source>${project.basedir}/src/main/resources/schema/xsd/dummy.xsd</source>
 						<source>${project.basedir}/src/main/resources/schema/xsd/batch-status.xsd</source>
+						<source>${project.basedir}/src/main/resources/schema/xsd/date-time.xsd</source>
 						<source>${project.basedir}/src/main/resources/schema/xsd/client-information.xsd</source>
 					</sources>
 					<clearOutputDir>false</clearOutputDir>
