--- a/src/main/resources/schema/OpenBankAPIv1.yaml
+++ b/src/main/resources/schema/OpenBankAPIv1.yaml
@@ -54,6 +54,40 @@ paths:
               schema:
                 type: string
                 example: Severe system failure has occured!
+  /api/date/time/{dateTime}:
+    get:
+      summary: Get date time
+      description: Get the date time RFC3339 string
+      operationId: getDateTime
+      parameters:
+      - name: dateTime
+        in: path
+        description: The get date time.
+        required: true
+        schema:
+          type: string
+        example: 2019-11-01T00:00:00ZZ
+      responses:
+        200:
+          description: The date time
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DateTime'
+        400:
+          description: Date time
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Invalid date time format.
+        500:
+          description: Severe system failure has occured!
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Severe system failure has occured!
   /api/openbank/start/slow/batch/mock:
     get:
       operationId: getOpenBankBatchStatus
@@ -152,6 +186,15 @@ components:
           example: john.doe@mail.com
       description: PersonAPI contains person's firstname, lastname and email address
         information.
+    DateTime:
+      required:
+      - dateTime
+      type: object
+      properties:
+        dateTime:
+          type: string
+          description: Date time
+          example: 2019-11-05T11:33:11ZZ
   securitySchemes:
     basicScheme:
       type: http
