Added SSL encryption to OpenBank
Added SSL encryption over the HTTPS protocol over the
the 8080 port.

Added generated jsquad.pfx keystore file with keystore type
PKCS12 with encrypted keystore key password.

Added documentation how to generate SSL keys (PKCS12).

Updated integration test for the HTTPS protocol.

Updated README.md file how to generate the pfx and jks key files
for running the application with PKCS12 keystore type SSL encryption
and how to generate the JKS keystore type for the java client
(integration test) to be able to talk to the OpenBank application
server.

--- a/src/main/resources/schema/OpenBankAPIv1.yaml
+++ b/src/main/resources/schema/OpenBankAPIv1.yaml
@@ -1,15 +1,15 @@
 openapi: 3.0.1
 info:
   title: OpenBank API
-  description: This is an OpenBank server. You can find out more about OpenBank at
-    [http://jsquad.se](http://jsquad.se).
+  description: This is an local HTTPS OpenBank server. You can find out more about
+    OpenBank at [http://jsquad.se](http://jsquad.se).
   termsOfService: http://jsquad.se/terms/
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
   version: "1"
 servers:
-- url: http://localhost:8080
+- url: https://localhost:8080
   description: Local OpenBank API server.
 paths:
   /api/client/info/{personIdentification}:
