--- a/src/main/resources/configuration_local.yaml
+++ b/src/main/resources/configuration_local.yaml
@@ -9,3 +9,8 @@ security.datasource:
   username: security_user
   password: ENC(vNq9+oOFXPNeXnQwwcPWWjMCgjNMOS5z2tt1TkE7WVxXK4bib+K8/w==)
   driverclassname: com.mysql.cj.jdbc.Driver
+
+server.ssl.key-store-type: PKCS12
+server.ssl.key-store: classpath:ssl/keystore/jsquad.pfx
+server.ssl.key-store-password: ENC(M5JhYsUTMq6n1OKArpvF+TvuBjQTDO+/)
+server.ssl.enabled: true
