Added new WebClientBusiness
Added new web client business service class that calls the new
WorldApiClient that returns the body content WorldApiResponse
with proper message.

Added new WebClientConfiguration class that setups specific
base url API endpoint.

Added WorldWebClientConfiguration prefix property to auto bind the
property base url value on container init with help of
ApplicationConfiguration class.

Added new WebClientBusinessTest class that tests the mocked
WorldWebClient service with a mocked response body content
containing the message 'Hello world'.

Updated the configuration yaml files with proper base url to
support world.webclient property configuration binding.

Added logic to the WorldApiClient to log and throw error runtime
exception on all error status codes.

Added GET Restful operation to get hello world message by talking
to remote RESTful HTTP server.

Set world.webclient.baseUrl to remote HTTP mocked RESTful server.

Added RESTful GET hello world system test.

Updated integration test with mocked Restful HTTP server.

Updated the configuration_encryption.yaml file with world web client
base url to be able to run the system test.

Added mockserver to the Docker Compose file for the integration tests.

Added mocker-server-client dependicies to be able to mock the RESTful
mockserver for the integration tests.

--- a/src/test/resources/test/configuration/configuration_encryption_test.yaml
+++ b/src/test/resources/test/configuration/configuration_encryption_test.yaml
@@ -7,3 +7,5 @@ security.datasource.url: jdbc:h2:mem:securitydb
 security.datasource.username: security_user
 security.datasource.password: ENC(BQTo3e4DqD/TddLkfKufj5sEqurb3dPdnbukNo/jgsw=)
 security.datasource.driverclassname: org.h2.Driver
+
+world.webclient.baseUrl: http://world.mock/api
