--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,13 @@
 version: "3.7"
 services:
+  worldapi:
+    image: jamesdbloom/mockserver:mockserver-5.7.0
+    expose:
+      - 1080
+    ports:
+      - 1080:1080
+    environment:
+      - LOG_LEVEL=INFO
   openbankdb:
     image: mysql:8.0.17
     environment:
@@ -51,4 +59,5 @@ services:
     depends_on:
       - openbankdb
       - securitydb
+      - worldapi
     restart: on-failure
