--- a/src/main/resources/configuration_local.yaml
+++ b/src/main/resources/configuration_local.yaml
@@ -15,3 +15,5 @@ server.ssl.key-store-type: PKCS12
 server.ssl.key-store: classpath:ssl/keystore/jsquad.pfx
 server.ssl.key-store-password: ENC(M5JhYsUTMq6n1OKArpvF+TvuBjQTDO+/)
 server.ssl.enabled: true
+
+world.webclient.baseUrl: http://worldapi:1080
