--- a/src/main/resources/schema/OpenBankAPIv1.yaml
+++ b/src/main/resources/schema/OpenBankAPIv1.yaml
@@ -12,6 +12,25 @@ servers:
 - url: https://localhost:8443
   description: Local OpenBank API server.
 paths:
+  /api/get/hello/world:
+    get:
+      summary: Get hello world by the remote http server
+      description: Get The hello world by the remote HTTP REST server
+      operationId: getHelloWorld
+      responses:
+        200:
+          description: Hello world
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WorldApiResponse'
+        500:
+          description: Severe system failure has occured!
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Severe system failure has occured!
   /api/get/client/info/:
     get:
       summary: Get client by client request body
@@ -141,6 +160,13 @@ paths:
                 type: string
 components:
   schemas:
+    WorldApiResponse:
+      required:
+      - message
+      type: object
+      properties:
+        message:
+          type: string
     ClientRequest:
       required:
       - personIdentificationNumber
