--- a/src/test/resources/test/configuration/configuration_test.yaml
+++ b/src/test/resources/test/configuration/configuration_test.yaml
@@ -7,3 +7,5 @@ security.datasource.url: jdbc:h2:mem:securitydb
 security.datasource.username: security_user
 security.datasource.password: security_password
 security.datasource.driverclassname: org.h2.Driver
+
+world.webclient.baseUrl: http://world.mock/api
