Added SSL to remote HTTP RESTful server
Added SSL to remote HTTP RESTful mock server by setting up the
mockserver for the integration test.

Updated the base url to HTTPS protocol.

Added insecure SslContext to the WebClient for testing purpose.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,9 @@ services:
       - 1080
     ports:
       - 1080:1080
-    environment:
-      - LOG_LEVEL=INFO
+    volumes:
+      - ./src/test/resources/test/ssl/truststore:/ssl
+    entrypoint: /opt/mockserver/run_mockserver.sh -serverPort 1080 -logLevel INFO -jvmOptions "-Dmockserver.javaKeyStoreFilePath='/ssl/jsquad.jks' -Dmockserver.javaKeyStorePassword='test1234' -Dmockserver.javaKeyStoreType='jks'"
   openbankdb:
     image: mysql:8.0.17
     environment:
