Added actuator prometheus metrics
Added actuator, prometheus metrics to the OpenBank application.

Added new actuator system-status endpoint for checking system health
status for validating that the security database and the openbank
database connection are up and running.

Added new system-status.xsd contract for the new actuator
endpoint.

Added health check integration tests for testing actuator
system-status endpoint when the databases openbankdb and securitydb
is up and when they are down.

Added pom dependicies for prometheus and Spring actuator metrics.

Added internal REST GET operation system-status check scheduler
that executes for every five minutes to be scraped by prometheus for
historic system-status data over time.

Added qualifiers to WebClient autowiring because there is 2 different
web clients.

Refactored test yaml files to be properties based instead since
Spring does not support yaml based files for system tests.

Updated test classes to use the properties files and the new web
client WorldApiWebClient qualifier in test setup.

--- a/src/main/resources/configuration_local.yaml
+++ b/src/main/resources/configuration_local.yaml
@@ -17,3 +17,12 @@ server.ssl.key-store-password: ENC(M5JhYsUTMq6n1OKArpvF+TvuBjQTDO+/)
 server.ssl.enabled: true
 
 world.webclient.baseUrl: https://worldapi:1080
+
+management.endpoint:
+  metrics.enabled: true
+  prometheus.enabled: true
+
+management.endpoints.web.exposure.include: 'system-status,prometheus'
+management.metrics.export.prometheus.enabled: true
+
+system.health.check.interval: '5 * * * * ?'
