--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright 2019 JSquad AB
+  ~ Copyright 2020 JSquad AB
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -33,10 +33,11 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<junit.jupiter.version>5.4.0</junit.jupiter.version>
+		<junit.jupiter.version>5.5.2</junit.jupiter.version>
 		<spring.version>5.1.6.RELEASE</spring.version>
 		<springdoc.openapi.version>1.1.49</springdoc.openapi.version>
 		<maven.surefire.version>2.22.2</maven.surefire.version>
+		<micrometer.version>1.3.2</micrometer.version>
 	</properties>
 
 	<dependencies>
@@ -67,6 +68,20 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-core</artifactId>
+			<version>${micrometer.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<version>${micrometer.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -283,6 +298,7 @@
 					</arguments>
 					<extension>true</extension>
 					<sources>
+						<source>${project.basedir}/src/main/resources/schema/xsd/system-status.xsd</source>
 						<source>${project.basedir}/src/main/resources/schema/xsd/dummy.xsd</source>
 						<source>${project.basedir}/src/main/resources/schema/xsd/batch-status.xsd</source>
 						<source>${project.basedir}/src/main/resources/schema/xsd/date-time.xsd</source>
