Updated Shallow and Deep health check
Added shallow system health check and integration test with help of
health actuator endpoint that checks diskspace for shallow system
status health check.

Updated the deep system health check integration test
to validate this OpenBank service as well.

Updated system configuration files with metrics endpoints,
shallow and deep actuator endpoints and prometheus
exposure.

Added travis CI file for running unit, system and Docker
integration tests.

Updated DeepSystemStatusIndicator to call shallow system status actuator for
service health status.

Added prometheus Docker Compose setup for local metrics testing.

Cleaned up unnessary WEB-INF setup.

Refractored healthy scheduler test to test meter registry instead.

Added custom made database health indicators for openbank-db and
security-db and use them in DeepSystemStatusIndicator class.

Added HealthMetricsConfiguration to validate shallow and deep
system status.

Cleaned up internal API webclient, not needed anymore.

Cleaned up scheduler interval from property/yaml configs.

Added Travis master branch CI icon success/fail link.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,6 +46,19 @@ services:
       - ./security/sql:/flyway/sql
     depends_on:
       - securitydb
+  prometheus:
+    image: prom/prometheus
+    volumes:
+    - ./monitoring/prometheus/configs:/etc/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yaml'
+    depends_on:
+      - openbank
+    restart: on-failure
+    expose:
+      - "9090"
+    ports:
+    - 9091:9090
   openbank:
     image: openbank
     build:
