Refactored health metrics
Exposed management and metrics to port 8081 without ssl.

Reconfigured prometheus to scrape on port 8081 and http instead.

Added grafana provisioning configuration.

Updated prometheus configuration and it's spring boot configuration.

Set Prometheus scrape time and scrape time out to 60 seconds to deal
with database connection lost issues and still get measurement data.

Updated actuator endpoint to shallowhealth and deephealth.

Added Prometheus health metrics and shallow/deep endpoint
integration tests.

Added logback setup for testcontainers.

Added new Docker Compose file to the integration tests.

--- a/monitoring/prometheus/configs/prometheus.yaml
+++ b/monitoring/prometheus/configs/prometheus.yaml
@@ -6,11 +6,14 @@ rule_files:
 # - "first_ruless.yaml"
 
 scrape_configs:
-  - job_name: 'openbank-prometheus'
-    scheme: https
-    tls_config:
-      insecure_skip_verify: true
-    metrics_path: '/actuator/prometheus'
-    scrape_interval: 5s
+  - job_name: 'prometheus'
+    scrape_interval: 1m
     static_configs:
-      - targets: ['openbank:8443']
+      - targets: ['localhost:9090']
+  - job_name: 'openbank-prometheus'
+    scheme: http
+    metrics_path: '/actuator/prometheus'
+    scrape_interval: 60s
+    scrape_timeout: 60s
+    static_configs:
+      - targets: ['openbank:8081']
