--- a/src/test/resources/docker-compose-int.yaml
+++ b/src/test/resources/docker-compose-int.yaml
@@ -4,10 +4,8 @@ services:
     image: jamesdbloom/mockserver:mockserver-5.7.0
     expose:
       - "1080"
-    ports:
-      - 1080:1080
     volumes:
-      - ./src/test/resources/test/ssl/truststore:/ssl
+      - ./test/ssl/truststore:/ssl
     entrypoint: /opt/mockserver/run_mockserver.sh -serverPort 1080 -logLevel INFO -jvmOptions "-Dmockserver.javaKeyStoreFilePath='/ssl/jsquad.jks' -Dmockserver.javaKeyStorePassword='test1234' -Dmockserver.javaKeyStoreType='jks'"
   openbankdb:
     image: mysql:8.0.17
@@ -43,40 +41,13 @@ services:
     image: flyway/flyway:6.0.6
     command: -url=jdbc:mysql://securitydb -schemas=security -user=root -password=${ROOT_PASSWORD} -connectRetries=60 migrate
     volumes:
-      - ./security/sql:/flyway/sql
+      - ../../../security/sql:/flyway/sql
     depends_on:
       - securitydb
-  grafana:
-    image: grafana/grafana
-    environment:
-      GF_SECURITY_ADMIN_USER: admin
-      GF_SECURITY_ADMIN_PASSWORD: test1234
-    depends_on:
-      - prometheus
-    restart: on-failure
-    expose:
-      - "3000"
-    ports:
-      - 3000:3000
-    volumes:
-      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
-  prometheus:
-    image: prom/prometheus
-    volumes:
-    - ./monitoring/prometheus/configs:/etc/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yaml'
-    depends_on:
-      - openbank
-    restart: on-failure
-    expose:
-      - "9090"
-    ports:
-    - 9091:9090
   openbank:
     image: openbank
     build:
-      context: .
+      context: ../../../.
       dockerfile: Dockerfile
     environment:
       MASTER_SECRET: "${MASTER_KEY}"
@@ -84,9 +55,6 @@ services:
     expose:
       - "8443"
       - "8081"
-    ports:
-      - 8443:8443
-      - 8081:8081
     depends_on:
       - openbankdb
       - securitydb
