--- a/src/main/resources/schema/OpenBankAPIv1.yaml
+++ b/src/main/resources/schema/OpenBankAPIv1.yaml
@@ -12,6 +12,38 @@ servers:
 - url: https://localhost:8443
   description: Local OpenBank API server.
 paths:
+  /api/update/client/information:
+    put:
+      summary: Update client information, mock implementation
+      description: Update the client information based with common constraint vaidation
+        for ClientApi xsd model.
+      operationId: updateClientInformation
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ClientInformationRequest'
+      responses:
+        200:
+          description: Get ClientApi model as base response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClientInformationResponse'
+        400:
+          description: Bad content
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: ClientApi payload contains bad content.
+        500:
+          description: Severe system failure has occured!
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Severe system failure has occured!
   /api/date/time/{dateTime}:
     get:
       summary: Get date time
@@ -160,39 +192,6 @@ paths:
                 type: string
 components:
   schemas:
-    DateTime:
-      required:
-      - dateTime
-      type: object
-      properties:
-        dateTime:
-          type: string
-          description: Date time
-          example: 2019-11-05T11:33:11ZZ
-    WorldApiResponse:
-      required:
-      - message
-      type: object
-      properties:
-        message:
-          type: string
-    ClientData:
-      required:
-      - personIdentificationNumber
-      type: object
-      properties:
-        personIdentificationNumber:
-          type: string
-          description: The client person identification number.
-          example: "191212121212"
-    ClientRequest:
-      required:
-      - clientData
-      type: object
-      properties:
-        clientData:
-          $ref: '#/components/schemas/ClientData'
-      description: The client request body.
     AccountApi:
       type: object
       properties:
@@ -216,7 +215,7 @@ components:
           - WITHDRAWAL
         message:
           type: string
-    ClientApi:
+    ClientInformationResponse:
       required:
       - clientType
       - person
@@ -279,6 +278,64 @@ components:
           example: john.doe@mail.com
       description: PersonAPI contains person's firstname, lastname and email address
         information.
+    ClientInformationRequest:
+      type: object
+      properties:
+        person:
+          $ref: '#/components/schemas/PersonApi'
+        accountList:
+          type: array
+          items:
+            $ref: '#/components/schemas/AccountApi'
+        clientType:
+          $ref: '#/components/schemas/ClientTypeApi'
+    DateTime:
+      required:
+      - dateTime
+      type: object
+      properties:
+        dateTime:
+          type: string
+          description: Date time
+          example: 2019-11-05T11:33:11ZZ
+    WorldApiResponse:
+      required:
+      - message
+      type: object
+      properties:
+        message:
+          type: string
+    ClientData:
+      required:
+      - personIdentificationNumber
+      type: object
+      properties:
+        personIdentificationNumber:
+          type: string
+          description: The client person identification number.
+          example: "191212121212"
+    ClientRequest:
+      required:
+      - clientData
+      type: object
+      properties:
+        clientData:
+          $ref: '#/components/schemas/ClientData'
+      description: The client request body.
+    ClientApi:
+      required:
+      - clientType
+      - person
+      type: object
+      properties:
+        person:
+          $ref: '#/components/schemas/PersonApi'
+        accountList:
+          type: array
+          items:
+            $ref: '#/components/schemas/AccountApi'
+        clientType:
+          $ref: '#/components/schemas/ClientTypeApi'
   securitySchemes:
     basicScheme:
       type: http
