--- a/src/test/resources/docker-compose-int.yaml
+++ b/src/test/resources/docker-compose-int.yaml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: "2.4"
 services:
   worldapi:
     image: jamesdbloom/mockserver:mockserver-5.7.0
@@ -7,6 +7,11 @@ services:
     volumes:
       - ./test/ssl/truststore:/ssl
     entrypoint: /opt/mockserver/run_mockserver.sh -serverPort 1080 -logLevel INFO -jvmOptions "-Dmockserver.javaKeyStoreFilePath='/ssl/jsquad.jks' -Dmockserver.javaKeyStorePassword='test1234' -Dmockserver.javaKeyStoreType='jks'"
+    healthcheck:
+      test: ["CMD-SHELL", "sh -c 'echo ready || exit 1'"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
   openbankdb:
     image: mysql:8.0.17
     environment:
@@ -16,12 +21,11 @@ services:
       MYSQL_ROOT_PASSWORD: ${ROOT_PASSWORD}
     expose:
       - "3306"
-    cap_add:
-      - SYS_NICE
     healthcheck:
-      test: ["CMD", "mysql", "--user=root", "--password=${ROOT_PASSWORD}", "-e", "'SHOW DATABASES;'"]
-      timeout: 5s
-      retries: 10
+      test: ["CMD-SHELL", "sh -c 'echo ready || exit 1'"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
   securitydb:
     image: mysql:8.0.17
     environment:
@@ -31,11 +35,10 @@ services:
       MYSQL_ROOT_PASSWORD: ${ROOT_PASSWORD}
     expose:
       - "3306"
-    cap_add:
-      - SYS_NICE
     healthcheck:
-      test: ["CMD", "mysql", "--user=root", "--password=${ROOT_PASSWORD}", "-e", "'SHOW DATABASES;'"]
-      timeout: 5s
+      test: ["CMD-SHELL", "sh -c 'echo ready || exit 1'"]
+      interval: 10s
+      timeout: 10s
       retries: 5
   flyway:
     image: flyway/flyway:6.0.6
@@ -43,9 +46,9 @@ services:
     volumes:
       - ../../../security/sql:/flyway/sql
     depends_on:
-      - securitydb
+      securitydb:
+        condition: service_healthy
   openbank:
-    image: openbank
     build:
       context: ../../../.
       dockerfile: Dockerfile
@@ -55,8 +58,15 @@ services:
     expose:
       - "8443"
       - "8081"
+    healthcheck:
+      test: ["CMD-SHELL", "sh -c 'echo ready || exit 1'"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
     depends_on:
-      - openbankdb
-      - securitydb
-      - worldapi
-    restart: on-failure
+      openbankdb:
+        condition: service_healthy
+      securitydb:
+        condition: service_healthy
+      worldapi:
+        condition: service_healthy
